--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,42 @@
+5.3 【今日阅读】https://lobste.rs/s/ndkycy/why_split_lexing_parsing_into_two Why Split Lexing and Parsing Into Two Separate Phases?
+
+5.2 【今日阅读】https://justsimply.dev/ Scan your technical writing for words such as easy, painless, straightforward, trivial, simple and just. Chances are your writing will be clearer as a result of removing them. Here’s a cleaned-up real life example, showing that the joy of the code can be better explained without all the “just”s and “simply”s.
+
+5.1 【今日阅读】https://skeeto.s3.amazonaws.com/share/onward17-essays2.pdf  An Alternative History of Undecidedness: achieving debuggability and reliability through simplicity
+and comprehensibility was central to the Unix philosophy. Somehow, modern implementations of C have diverged utterly from this. In the words of Linus Torvalds, they are adept at “turning [a] small mistake into a real and exploitable security hole”.
+
+4.30 【今日阅读】https://lobste.rs/s/qxlh6m/native_implementation_mutable_value mutable value semantics is a nice middle ground between reference semantics and total purity.
+
+4.29 【今日阅读】https://www.moderndescartes.com/essays/research_code/ The Three-Tier Codebase: Core, Projects, Experimental
+
+4.28 【今日阅读】https://lobste.rs/s/ee4npn/gradle_still_sucks Gradle still sucks
+
+4.27 【今日阅读】https://www.youtube.com/watch?v=w3WYdYyjek4 The speaker shares a "magic trick" for designing and building complex distributed systems more efficiently. The trick is referred to as "tiger style" and consists of three ideas that work together: seeing the whole picture, checking oneself before proceeding, and using a time machine to bring the future forward. By applying these ideas, the speaker's team was able to design and build a distributed financial accounting database called Tiger Beetle in less than three years, with a focus on mission-critical safety and performance. Tiger style challenges the idea of using popular tools and dependencies simply because they are popular, instead encouraging developers to choose tools based on quality. The speaker argues that having a hard problem to solve is a blessing, and that tiger style can help developers solve these problems more effectively. The talk includes a demo of the tiger style approach and concludes with the idea that using tiger style can help developers build systems they may have never thought possible before.
+
+4.26 【今日阅读】https://ntietz.com/blog/distractions-cause-bad-code/ We are barraged by constant distractions, and they are degrading the quality of our work.
+
+4.25 【今日阅读】https://www.appsmith.com/blog/monoliths-vs-microservices-1 When interviewing candidate software engineers, I always ask the question, “What will you do to improve Appsmith?” The all-too common response from candidates is, “I would make the Appsmith codebase microservice-oriented.”
+
+4.24 【今日阅读】https://news.ycombinator.com/item?id=35676572 A colleague of mine talks about the Law of Conservation of Complexity. It boils down to "the complexity will have to go somewhere". My only hesitation with methods like this is it ends up splitting the business rules into two places, where one is sort of obscured.
+
+4.23 【今日阅读】https://jimmyhmiller.github.io/empirical Q: Do you just hate empirical software studies? A: No. I have nothing against it at all. Studying the world is great. I just see a common implicit conflation of what science tells us is true and what we ought to do. These things are not one and the same and we should pay attention to that.
+
+4.22 【今日阅读】https://people.inf.ethz.ch/wirth/Articles/LeanSoftware.pdf software developers should strive to create lean software that is simple, efficient, and easy to understand. While there are some potential downsides to lean software, such as a lack of features or reduced performance, Wirth believes that the benefits of lean software outweigh the drawbacks. Software developers should prioritize simplicity and efficiency when creating software, rather than trying to cram in as many features as possible.
+
+4.21 【今日阅读】https://lobste.rs/s/pqwtxa/why_perl When a programmer writes a blog article “Why (language)?”, the answer is always and inevitably: “Because that’s the language that I know.” Everything else is a rounding error.
+
+4.20 【今日阅读】https://tidyfirst.substack.com/p/90-of-my-skills-are-now-worth-0 to everyone say, “Yeah, but ChatGPT isn’t very good,” I would remind you that technological revolutions aren’t about absolute values but rather growth rates. If I’m big & you’re small & you’re growing faster, then it’s a matter of time before you surpass me.
+
+4.19 【今日阅读】https://lobste.rs/s/higjju/building_15_year_old_software_with_nix I suppose the fundamental problem is that the Nixpkgs repo only contains the information for how to build one version of a package at any given time -namely, the latest version of the package that the maintainer has updated in the Nixpkgs repo. The author had to go back into the Git history to find the version they cared about, copy the file, and manually backport all the fixes for things that had been fixed in later versions of the Nixpkgs repo.
+
+4.18 【今日阅读】https://www.youtube.com/@WorstPractices We've all heard enough of everyone's "best practices" in software development. What are the *worst* practices you follow?
+
+4.17 【今日阅读】https://lobste.rs/s/iksbf4/alien_artefacts the biggest example of this that i can think of is google’s “gcl” or “borgcfg” (two names for the same config language). it’s also a lazily-evaluated language with dynamic scope and inheritance. i don’t think anybody knows a concise description of how it resolves symbols, including the team that owns it. it’s usually described by example in documentation, and forensically in postmortems
+
+4.16 【今日阅读】https://apenwarr.ca/log/20201227 "Systems design" is a branch of study that tries to find universal architectural patterns that are valid across disciplines. https://apenwarr.ca/log/20230415 scientists absolutely bloody despise emergent complexity → systems design → magical thinking.
+
+4.15 【今日阅读】https://registerspill.thorstenball.com/p/two-types-of-software-engineers The first type is very common. They are the reason everything is complex and fragile.
+
 4.14 【今日阅读】https://devblogs.microsoft.com/cppblog/cmake-debugger-allows-you-to-debug-your-cmake-scripts-and-more/ 看了 cmake 的 debugger，不禁怀疑为什么需要 cmake，它并没有通过一门叫 cmake 的语言约束使得调试体验更好啊。
 
 4.13 【今日阅读】https://spritely.institute/news/introducing-a-distributed-debugger-for-goblins-with-time-travel.html Debugging distributed programs is difficult, but we’ve been hard at work developing tools to make it easier
