--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,42 @@
+5.14 【今日阅读】https://blog.ganssle.io/articles/2023/01/attractive-nuisances.html 大多数用户不会从头到尾完全理解你的文档和概念,然后使用你的软件解决问题——他们会使用软件尝试解决问题,然后寻找最简单的解决方案实施。在设计界面时,这一点很重要,因为很容易无意中创建吸引过失;如果有两种方法完成任务,一种简单看起来正确但细微错误,另一种正确但更复杂,大多数人会做错事。我博客的许多文章事后试图教育人们关于这些吸引过失,如pytz和utcnow()和utcfromtimestamp()的文章。
+
+5.13 【今日阅读】https://justinblank.com/notebooks/characterizingtechdebt.html 技术债务是一个广泛使用但含义不明确的术语。最初,Ward Cunningham将其定义为采取迭代开发过程时的一个现象:由于需求和理解在不同阶段会发生变化,代码在某个时候无法完全匹配开发人员的理解,这需要额外的工作来修复,就像还债一样。但是,该术语的定义已扩展到涵盖任何开发人员不喜欢的代码,低质量代码,业余程序员编写的代码,不考虑软件架构的代码(所谓的“乱麻球”)以及静态分析工具标记的反模式代码。技术债务有几个维度:影响、修复成本和传染性。技术债务可以是:本地债务、胡迪债务、基础债务或数据债务。为了解决这个问题,应选择某些可衡量的东西来评估系统的质量。作者建议使用维护负载。维护负载是开发人员在非新增功能或删除功能的任务上花费的时间和精力。与业务人员讨论这个数字。如果我们有6名开发人员,但一半的工作是维护工作,那么我们的功能计划只能假定3名开发人员。业务人员认为工程师是昂贵的,所以这种框架可以激励他们帮助我们降低维护负载。
+
+技术债务并不仅仅是糟糕的代码。它也不是维护工作或过时的依赖关系。相反,它涉及到为了短期利益而使未来的维护成本增加的有意识的选择。
+“技术债务”这个短语应该是一个谈话的开始,而不是结束。考虑你的受众是谁,在使用任何技术术语之前,要正确理解它。
+
+5.12 【今日阅读】https://www.thoughtworks.com/insights/podcasts/technology-podcasts/reckoning-with-the-force-conways-law 这篇文章提出了一些不寻常的观点:
+
+1. 康威定律影响软件架构。组织的沟通结构会限制它产生的设计。换句话说,软件团队的组织方式会影响最终的软件架构。
+
+2. 逆向康威机动利用康威定律的力量来取得想要的结果。通过调整软件开发的组织方式来产生理想的软件架构。
+
+3. 随着时间的推移,组织方式和软件架构都在不断演变。你不能将两者分开考虑。要时刻牢记康威定律的存在,并善于利用它,而不是与之抗争。
+
+4. 业务能力是稳定的,而实现会变化。业务能力涵盖人员、流程和工具(其中工具指软件),这些要素共同构成企业体系结构的稳定部分。
+
+5. 远程工作会影响沟通模式和软件架构决策。远程工作虽然减弱了沟通,但也推动了组织方式和软件架构的变革。我们还需要更多时间来观察这些变化对不同组织的影响。
+
+6. 要成为一名出色的软件架构师,你必须意识到康威定律的存在,并关注软件开发组织的设计。软件架构的演进同时也需要开发团队组织的演进。你必须同时关注这两个方面。
+
+5.11 【今日阅读】https://lemire.me/blog/2023/04/27/hotspot-performance-engineering-fails/ that explain why companies do full rewrites of their code for performance: the effort needed to squeeze more performance from the existing code becomes too much and a complete rewrite is cheaper.
+
+5.10 【今日阅读】https://autonomy.design/Part1/ConsistencyMetrics.html 所谓“阻断率”就是 https://en.wikipedia.org/wiki/Effect_system
+
+5.9 【今日阅读】https://nathan-kim.org/writing/nixos-post-mortem The main issue, which many people have commented on, is that NixOS invented a programming language called Nix to manage the system, and that language is extremely frustrating. It is difficult to learn because there are relatively few guides available online to learn it, a compounding problem given Nix’s general difficulty arguably require more guides for it than other high-level languages. Some design decisions make the language aggravatingly confusing.4 And the language syntactically does not really resemble any popular high-level language.
+
+5.8 【今日阅读】https://blog.testdouble.com/posts/2023-05-02-frictionless-developer-environments/ devenv and direnv
+Frictionless developer environments
+Reducing friction and pain points for new contributors can reduce your time-to-first-commit.
+
+5.7 【今日阅读】https://testing.googleblog.com/2023/04/sensenmann-code-deletion-at-scale.html Automatically deleting code may sound like a strange idea: code is expensive to write, and is generally considered to be an asset. However, unused code costs time and effort, whether in maintaining it, or cleaning it up. Once a code base reaches a certain size, it starts to make real sense to invest engineering time in automating the clean-up process. At Google's scale, it is estimated that automatic code deletion has paid for itself tens of times over, in saved maintenance costs.
+
+5.6 【今日阅读】https://lobste.rs/s/fsnvuu/even_amazon_can_t_make_sense_serverless Even Amazon can't make sense of serverless or microservices
+
+5.5 【今日阅读】https://lobste.rs/s/etmmm5/moving_prime_video_service_monolith I think it’s easier to go from microservices to monoliths because coupling two systems is easier than decoupling them. Like a trivial optimization for this situation would be to colocate the services and eventually remove the “remote” from “remote procedure call” altogether. So in that sense microservices are “safer” in that if you want to back out it’s trivial.
+
+5.4 【今日阅读】https://cohost.org/mcc/post/1406157-i-want-to-talk-about-webgpu WebGPU is the new WebGL. That means it is the new way to draw 3D in web browsers. It is, in my opinion, very good actually. It is so good I think it will also replace Canvas and become the new way to draw 2D in web browsers. In fact it is so good I think it will replace Vulkan as well as normal OpenGL, and become just the standard way to draw, in any kind of software, from any programming language.
+
 5.3 【今日阅读】https://lobste.rs/s/ndkycy/why_split_lexing_parsing_into_two Why Split Lexing and Parsing Into Two Separate Phases?
 
 5.2 【今日阅读】https://justsimply.dev/ Scan your technical writing for words such as easy, painless, straightforward, trivial, simple and just. Chances are your writing will be clearer as a result of removing them. Here’s a cleaned-up real life example, showing that the joy of the code can be better explained without all the “just”s and “simply”s.
