--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,62 @@
+5.31 【今日阅读】https://blog.ploeh.dk/2023/05/29/favour-flat-code-file-folders/ Favour flat code file folders. People usually dislike that advice. How can I find anything?!
+
+5.30 【今日阅读】https://www.joshwcomeau.com/career/clever-code-considered-harmful/ Clever Code Considered Harmful
+
+5.29 【今日阅读】https://lobste.rs/s/tlau5r/names_are_not_descriptions_descriptions So, why do we have names? Because we store packages in indices with names for keys. Maybe we shouldn’t have package indices.
+Maybe we shouldn’t have packages; this is a very tough concept but worth pondering. Quoting the question in its entirety:
+Suppose that a programming language has modules, but does not have a notion of packages or other collections of modules. Which software engineering tasks are expensive or impossible without packages?
+
+5.28 【今日阅读】https://blog.replit.com/super-colliding-nix-stores Replit has bet big on Nix because we believe in a future where developers are free from the drudgery of setting up their development and production environments. A world where onboarding a co-worker is as simple as forking a Repl. When you use Nix to describe your environment, you don’t have to redo your setup everywhere you want your code to work. As Mitchell Hashimoto, founder of Hashicorp, said: one big benefit is that once you adopt Nix, you can get a consistent environment across development (on both Linux and Mac), CI, and production.
+
+5.27 【今日阅读】https://two-wrongs.com/event-sourcing-and-microservices-unix-style.html 这篇文章讲述了如何使用类Unix风格的思想来实现事件溯源和微服务架构。主要的思想是:
+
+1. 高内聚和低耦合。这两个理念是软件工程中许多好的实践的基础,如单一职责原则、DRY原则、接口隔离原则等。高内聚的组件更易于理解,低耦合的组件可以独立运行和异步通信。 
+2. 避免过度复杂化。实现微服务架构不一定需要复杂的工具和框架。简单的脚本和纯文本文件也可以实现同样的效果,除非你真的需要那些工具提供的功能。
+3. 遵循Unix哲学。Unix哲学推崇“做一件事并把它做好”和“让程序协同工作”。这篇文章的例子演示了如何简单的脚本协同工作来实现一个小系统。
+4. 事件作为不变的原子信息。事件不做任何假设,可以解耦组件。日志文件充当不变的事件来源。
+5. 避免短暂的耦合。分析脚本和生成脚本被设计为独立运行,生成脚本不直接使用最新的数据来影响它的分布。这避免了两者之间的短暂耦合。
+
+总的来说,这篇文章展示了如何根据Unix哲学来设计一个简单的系统,利用高内聚、低耦合和事件来实现松散耦合的微服务架构。
+Event Sourcing and Microservices – Unix Style
+Two Wrongs Event Sourcing and Microservices – Unix Style Home Tags Feed About xkqr.org Event Sourcing and Microservices – Unix Style by kqr , published 2023-05-11 Tags: meta_programming unix programmi
+
+
+5.26 【今日阅读】https://chipsandcheese.com/2023/01/07/microbenchmarking-amds-rdna-3-graphics-architecture/ I’m guessing RDNA 3’s dual issue mode will have limited impact. It relies heavily on the compiler to find VOPD possibilities, and compilers are frustratingly stupid at seeing very simple optimizations. For example, the FMA test above uses one variable for two of the inputs, which should make it possible for the compiler to meet dual issue constraints. But obviously, the compiler didn’t make it happen. We also tested with clpeak, and see similar behavior there.
+
+5.25 【今日阅读】https://thinkinglabs.io/articles/2023/05/02/continuous-code-reviews-using-non-blocking-reviews-a-case-study.html Whereas with blocking reviews, like Pull Requests, a redesign means a delay in delivery. With Non-Blocking Reviews we do not have that. Yet, to be honest, when I have to work with Pull Requests I frequently find myself accepting non-optimal designs to ensure the feature is delivered. But I suggest improving the design. Nevertheless, I always leave that decision to the person requesting the review to create empowerment.
+
+5.24 【今日阅读】https://itnext.io/does-linq-to-monad-improve-code-readability-can-we-measure-that-b8afdac41a35 Let’s try come with a prompt so we can measure code readability.
+
+5.23 【今日阅读】https://redd.one/blog/the-art-of-code-review The Art of Code Review
+
+5.22 【今日阅读】https://mojodojo.dev/mojo_team_answers.html#what-makes-rust-c-compilation-slow What makes Rust/C++ compilation slow? Type system. you're creating all the llvm ir nodes ("LLVM") and then asking llvm optimization passes to delete them for you. It is far better to not generate it in the first place. Reasonable codegen is O(N^2) and worse in core algorithms like register allocation and scheduling.
+
+5.21 【今日阅读】https://explosion.ai/blog/against-llm-maximalism 如果你想开发可靠和可扩展的系统,LLM本身并不是直接的解决方案。相反，作者建议将任务分解成一系列预测和生成步骤，将LLM视为系统中的另一个模块，并根据需要调用它。
+
+5.20 【今日阅读】https://lobste.rs/s/dcqnkv/organize_business_logic_your_ruby_on Rails use at large seems to have converged on the “use-case controller” with “row-table as object” (row-table gateway) patterns, rather than the Active Record pattern. Procedural scripts and sub-procedures driving database data.
+
+5.19 【今日阅读】https://www.se-radio.net/2023/05/se-radio-564-paul-hammant-on-trunk-based-development/ Paul Hammant, independent consultant, joins host Giovanni Asproni to speak about trunk-based development—a version control management practice in which developers merge small, frequent updates to a core “trunk” or main branch. The episode explores the technique in some detail, including its pros and cons and some examples from real projects, and offers suggestions on how to get started. The conversation touches on a set of related topics, including code reviews, feature flags, continuous integration, and testing.
+
+5.18 【今日阅读】https://lobste.rs/s/aqez4c/how_are_nullables_different_from_mocks Yes, at the lowest level, a Nullable is a production module with an embedded Fake or Stub. Nullables have two big advantages over traditional Fakes and Stubs. 
+* First is that you stub the third-party library, not your own code. Fakes and stubs are usually written as a replacement for your code. The Nullable approach means that your tests are running all the code you wrote, so you catch more errors when things change. 
+* The other advantage of Nullables over traditional Fakes and Stubs is the emphasis on encapsulation. Although they’re implemented with an embedded Fake/Stub at the lowest level, the conception of the Nullable is that it’s “production code with an infrastructure off switch.”
+
+5.17 【今日阅读】https://www.thecodedmessage.com/posts/async-colors/ Colored Is Good, Actually, and Rusty
+
+5.16 【今日阅读】https://news.ycombinator.com/item?id=35935944 这段评论在讨论什么样的软件开发方法论比较好。具体来说:
+
+作者提出的“假设驱动开发”方法论,意思是通过设想各种使用场景和数据输入来推导出适当的类型系统和业务逻辑。评论者kstenerud提出这个方法在需求变更时会很难应对,可能需要重构类型系统,所以仍需要测试来保证正确性。
+
+其他评论者认为,如果类型系统设计得当,需求变更时可以更容易地扩展类型系统,并且编译器可以提示需要修改的地方。但typescript这样的强类型语言在超复杂的系统中还是会难以建立完备的类型系统。
+
+有评论认为,除非是非常规范化和可预测的领域(如金融),大部分软件项目的需求实际上都是不断变化的,很难给出标准的“正确”定义。所以像作者提出的那种以“正确性”为目标的开发方法论,实际上并不实用。但某些团队和项目还是可以从中受益。
+
+也有评论指出,真正的“根本原因”通常比作者举例中提到的更复杂。一个事件的起因通常不是单一的,而是多个因素的综合结果。
+
+所以,总体来说,评论者认为软件开发的方法论选择还需要考虑很多方面,并不像作者所暗示的那么简单。需求和环境的复杂程度,团队实力等,都会对方法论的适用性产生较大影响。
+
+5.15 【今日阅读】http://www.radicalsimpli.city/ What is Radical Simplicity? Radical Simplicity means having as few components and moving parts as possible. Reuse technology for different purposes instead of having a new moving part for each purpose. Instead of using Postgres as a database, Druid for an event store, Redis for caching, Rabbit MQ as a message queue and Elastic for fulltext search, use a hosted Postgres as a database, for fulltext search, html caching, publish/subscribe, and an event store with TimescaleDB.
+
 5.14 【今日阅读】https://blog.ganssle.io/articles/2023/01/attractive-nuisances.html 大多数用户不会从头到尾完全理解你的文档和概念,然后使用你的软件解决问题——他们会使用软件尝试解决问题,然后寻找最简单的解决方案实施。在设计界面时,这一点很重要,因为很容易无意中创建吸引过失;如果有两种方法完成任务,一种简单看起来正确但细微错误,另一种正确但更复杂,大多数人会做错事。我博客的许多文章事后试图教育人们关于这些吸引过失,如pytz和utcnow()和utcfromtimestamp()的文章。
 
 5.13 【今日阅读】https://justinblank.com/notebooks/characterizingtechdebt.html 技术债务是一个广泛使用但含义不明确的术语。最初,Ward Cunningham将其定义为采取迭代开发过程时的一个现象:由于需求和理解在不同阶段会发生变化,代码在某个时候无法完全匹配开发人员的理解,这需要额外的工作来修复,就像还债一样。但是,该术语的定义已扩展到涵盖任何开发人员不喜欢的代码,低质量代码,业余程序员编写的代码,不考虑软件架构的代码(所谓的“乱麻球”)以及静态分析工具标记的反模式代码。技术债务有几个维度:影响、修复成本和传染性。技术债务可以是:本地债务、胡迪债务、基础债务或数据债务。为了解决这个问题,应选择某些可衡量的东西来评估系统的质量。作者建议使用维护负载。维护负载是开发人员在非新增功能或删除功能的任务上花费的时间和精力。与业务人员讨论这个数字。如果我们有6名开发人员,但一半的工作是维护工作,那么我们的功能计划只能假定3名开发人员。业务人员认为工程师是昂贵的,所以这种框架可以激励他们帮助我们降低维护负载。
