--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,19 @@
+6.4 【今日阅读】https://mitchellh.com/writing/building-large-technical-projects 这篇博客是 Mitchell Hashimoto 对如何完成大型技术项目的个人见解。以下是主要的观点：
+
+    项目启动：找到项目开始的地方可能是最难的部分。对于大型项目，你需要首先将其分解成可见的子项目。例如，如果你的目标是构建一个能运行 Neovim 的终端，那么你需要识别出构建这个终端所需的各个组件，如 GUI 的渲染、进程的启动、终端解析和状态管理等。然后，你可以选择一个可以独立构建并看到实际结果的子项目开始​1​。
+
+    早期结果：早期的工作可能并不太可见，这使得看到具体结果变得困难。在这个阶段，自动化测试（尤其是单元测试）是一个非常好的工具，可以让你实际运行一些代码，并看到它是如何工作的​1​。
+
+    冲刺到演示：早期子项目的目标不是建立一个完整的子组件，而是建立一个足够好的子组件，以便你可以继续下一个导向演示的工作。重要的是不要让完美成为进步的敌人。你要明确，你的目标是达到一个演示，而不是完美的产品​1​。
+
+    为自己建设：如果你在做个人项目，那么应当尽可能快地使用你的软件，并且只在需要的时候构建你需要的功能。如果一个为你设计的产品对你自己都不管用，那么它很可能对其他人也不管用。因此，从演示到实际可用产品的最短路径，是只构建你认为需要的功能​1​。
+
+6.3 【今日阅读】https://novalis.org/blog/2016-09-27-against-generality.html And this is why basically nothing is 20,000 lines of code, and if anything is 20,000 lines of code, it’s “by shaving off as many requirements of every imaginable kind as you can”.
+
+6.2 【今日阅读】https://hackmd.io/@cflewis/Sk0gb9ILh On Software Dependency Engineering
+
+6.1 【今日阅读】https://lobste.rs/s/wu1bo4/how_discover_all_data_sources_low_fuss_way How to discover all the data sources, low-fuss way
+
 5.31 【今日阅读】https://blog.ploeh.dk/2023/05/29/favour-flat-code-file-folders/ Favour flat code file folders. People usually dislike that advice. How can I find anything?!
 
 5.30 【今日阅读】https://www.joshwcomeau.com/career/clever-code-considered-harmful/ Clever Code Considered Harmful
