--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,60 @@
+6.16 【今日阅读】https://www.sebaslab.com/the-quest-for-maintainable-code-and-the-path-to-ecs/ 这篇文章的主要内容是:
+
+    作者认为可维护的代码应该易于阅读、扩展和重构。可维护的代码通常属于不断演变和变化的代码库。像游戏服务这样的产品需要不断演变来吸引玩家,代码本身也会通过无数次迭代不断变化。仅凭编码指南和代码审查是不够的,要保证代码不会随着时间的推移变得难以管理。
+
+    作者认为,面向对象编程中的数据封装对于抽象数据类型来说效果很好。你可以创建数据结构,提供公共函数来管理这个数据结构。封装可以很好地隐藏复杂性。但是,封装本身无法防止对象被误用。如果可以编写一个应用程序而不需要任何形式的对象间通信,我们就可以开发出完美封装的实体。如果我们还设计类来解决一个单一的问题,那么我们就会有一个可维护的代码库的完美场景。代码库将精简,模块化和完全解耦。
+
+    作者认为,面向对象编程中对象通信的问题始终存在。无论是通过事件、消息、中介者还是其他方式,对象通信总是需要以某种方式意识到要与之通信的对象。对象通信是造成任何意大利面代码的原因。所有的抽象形式和相对良好的实践最终目的都是为了控制对象间的通信。
+
+    作者认为,实体组件系统设计是开发更简单、更便宜的代码库的一种很好的范例。实体组件系统提供了开发大多数(如果不是全部)游戏相关行为的严格方向。实体组件系统很容易促进通过行为抽象的模块化,这导致SOLID原则的自然应用。
+
+    作者试图理解SOLID原则(面向对象编程范例)是否也适用于实体组件系统范例。如果ECS用于编写ECS中心的应用程序,而不仅仅是需要“快速”的几个部分,我们需要一些指导方针来确保我们的代码
+
+6.15 【今日阅读】https://news.ycombinator.com/item?id=26686770 On Cache Invalidation: Why Is It Hard?
+
+6.14 【今日阅读】https://github.com/jakobkhansen/CCDetect-lsp 这是一个执行重复代码检测（也称为代码克隆检测）的LSP工具。此工具的目标是创建一个完全增量更新的静态分析工具，它在编辑器环境中提供实时的克隆检测。此工具利用树状结构的语法进行任意语言的增量解析，实现了快速的增量更新（在保存或每次按键时），甚至在非常大的代码库上。
+
+6.13 【今日阅读】https://lobste.rs/s/vtghvu/why_not_tell_people_simply_use_pyenv 作者主要有两个原因建议Python用户避免使用诸如homebrew、pyenv、anaconda和poetry等工具：
+
+1. 故障模式过于复杂：尽管这些工具被设计出来是为了简化Python的安装和包管理，但是它们带来的故障模式的数量和复杂性都很高。这些问题并不容易解决，特别是对于平均用户来说，他们可能没有足够的资源来处理这些故障​​。
+2. 投资回报率较低：使用这些工具所带来的收益并不能抵消处理它们可能出现的问题所需的时间和精力。换句话说，虽然这些工具可能在某些情况下会有所帮助，但是由于它们可能引发的问题，所以使用它们的总体回报可能会变得较低​。
+
+因此，作者倾向于推荐一种更简单、更直接的方式来解决Python包管理的问题，这种方式更注重于解决最常见的问题，而不是尝试去解决所有可能出现的问题。
+
+6.12 【今日阅读】https://lobste.rs/s/vx8hbs/rust_module_system_encourages_poor Rust Module System Encourages Poor Practices (Comparing to Go)
+
+6.11 【今日阅读】https://two-wrongs.com/handoff-waste-and-taylorism.html We can minimise handoff by keeping the four functions of responsibility, knowledge, action, and feedback together. For each product being developed, there should be exactly one person
+
+6.10 【今日阅读】https://docs.google.com/document/u/0/d/1HB9CUfavNbeP1cU8QPl9kjYuiME2_90P5DDRjqxYyIo/mobilebasic#heading=h.j54phqvh6ubj SRE in the Real World
+
+6.9 【今日阅读】https://www.toptal.com/software/creating-modular-code-with-no-dependencies Creating Truly Modular Code with No Dependencies
+
+6.8 【今日阅读】https://www.infoq.com/articles/debugging-beneath-trusted-abstraction/ 作者的公司的支付平台的数据库集群遭遇了重大故障。他们不得不手动切换到一个副本来恢复服务。
+
+他们花了两周的时间去调查和重现这次故障，以全面理解发生了什么并解决问题。他们使用Docker Compose环境来快速测试不同的假设。
+
+他们将潜在问题缩小到了5个可能的调查路径。他们从“低挂的果实”开始——那些可能导致故障且调查工作量较小的问题。
+
+他们深入研究Postgres内部机制，理解复制和预写日志（WAL）格式，以便重现他们看到的一个可疑的错误信息。这花了很多试错，但他们最终能够准确地重现了这次故障。
+
+结果WAL数据的问题是一种误导。实际的问题是他们的Pacemaker配置和他们用于备份的“虚拟IP”之间的交互。他们的限制条件阻止了Pacemaker正确地故障转移。
+
+他们从中得到的教训是，当出现协调故障时，简单的配置可能会导致灾难，自动化可能会侵蚀对系统的了解，测试环境可能无法完全匹配生产环境。
+
+调试复杂问题的关键是坚持，质疑你的假设，有时还要在生产环境中调试。与社区中的其他人分享调试故事可以帮助所有人提高。
+
+作者邀请读者分享他们调查过的有趣的bug的故事，使用标签 #MyDebuggingStatus。分享具体的经验可以帮助他人以一种正式的材料无法做到的方式学习。
+
+6.7 【今日阅读】https://semgrep.dev/blog/2023/turbo-mode a fast linter compiled as wasm
+
+6.6 【今日阅读】https://www.youtube.com/watch?v=02rkpTou3fs Worst Practices in Software Development 系列: Sean Taylor's notebooks are a mess
+
+6.5 【今日阅读】https://lobste.rs/s/zftsuo/git_is_simply_too_hard_2020 
+
+The amount of time I spent during my career helping people with Git or SQL issues is mind boggling. IMHO, this is not the fault of Git or SQL, it’s the fault of our industry.
+
+If a carpenter didn’t know how to use a sawbench or a nailer, we would consider them a bad carpenter. But if a developer doesn’t want to learn the standard tool, and just want get their work done without learning how to master anything, this is somehow acceptable…
+
 6.4 【今日阅读】https://mitchellh.com/writing/building-large-technical-projects 这篇博客是 Mitchell Hashimoto 对如何完成大型技术项目的个人见解。以下是主要的观点：
 
     项目启动：找到项目开始的地方可能是最难的部分。对于大型项目，你需要首先将其分解成可见的子项目。例如，如果你的目标是构建一个能运行 Neovim 的终端，那么你需要识别出构建这个终端所需的各个组件，如 GUI 的渲染、进程的启动、终端解析和状态管理等。然后，你可以选择一个可以独立构建并看到实际结果的子项目开始​1​。
