--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,82 @@
+6.28 【今日阅读】https://lobste.rs/s/ifaar4/grug_brained_developer this collection of thoughts on software development gathered by grug brain developer
+
+6.27 【今日阅读】https://www.amazon.com/dp/B0BW38DDBK who would have ever thought we need 267 pages about initializing variables/objects
+
+6.26 【今日阅读】https://news.ycombinator.com/item?id=36465220 This may be overly negative to a whole field, but I sometimes feek the platform teams add more hurdles than "stability and velocity".
+At places with basically no platform team, no advanced cloud setup etc, I as a dev could understand everything, and deploying mostly meant getting my jar file or whatever running on some ec2 instance.
+
+Now I need to write a dockerfile, loads of manifests, know about ingresses, use whatever custom tooling and abstractions they've built on top of the cloud provider.
+
+And what used to be a single guy is now a huge team just adding more complexity. And I'm having a hard time understanding if it's worth it, or just a cost sink.
+
+6.25 【今日阅读】https://www.youtube.com/watch?v=2xC-d4rXT0k In this episode, we hear from David Fowler about his worst practice in software development: he can't use a template, scaffolding, or snippets without spending countless hours understanding why every line of code needs to be there.
+
+6.24 【今日阅读】https://kind.engineering/ So I’d like to leave you with a simple question to get you thinking about kindness in your own teams, in your own companies:
+
+How can you be kinder?
+
+6.23 【今日阅读】https://buttondown.email/hillelwayne/archive/agile-is-people-the-rest-is-commentary/ Agile is people, the rest is commentary
+
+6.22 【今日阅读】https://jordankaye.dev/posts/flexible-systems/ Thus my assertion: whether you’re working with people or with technology, your ability to change decisions in the future will often outweigh the importance of the decisions themselves.
+
+6.21 【今日阅读】https://vllm.ai/ PagedAttention是一种新的注意力算法,它可以有效地管理注意力键和值。PagedAttention将注意力键值缓存分成块,每个块包含固定数量的令牌的键和值。在注意力计算期间,PagedAttention内核可以高效地识别和获取这些块。
+
+因为块不需要在内存中连续,所以我们可以像操作系统的虚拟内存一样更灵活地管理键和值:可以将块视为页面,令牌视为字节,序列视为进程。序列的连续_逻辑块_映射到非连续的_物理块_,通过块表进行映射。物理块根据需要在生成新令牌时分配。
+
+PagedAttention的另一个关键优点是高效的内存共享。例如,在_并行采样_中,多个输出序列从相同的提示生成。在这种情况下,用于提示的计算和内存可以在输出序列之间共享。PagedAttention通过其块表自然地启用内存共享。类似于进程如何共享物理页面,PagedAttention中的不同序列可以通过将其逻辑块映射到相同的物理块来共享块。为了确保安全共享,PagedAttention跟踪物理块的引用计数,并实现_写时复制_机制。
+
+PagedAttention的内存共享大大减少了复杂采样算法的内存开销,例如并行采样和束搜索,将其内存使用量减少了高达55%。这可以将吞吐量提高高达2.2倍。这使得这样的采样方法在LLM服务中变得实用。
+
+PagedAttention是vLLM的核心技术,vLLM是我们的LLM推理和服务引擎,支持各种模型,性能高且接口易于使用。有关vLLM和PagedAttention的更多技术细节,请查看我们的GitHub仓库,并密切关注我们的论文。
+
+6.20 【今日阅读】https://www.youtube.com/watch?v=PvSpyhm6TUU 
+抽象有助于我们获得更广泛的视角,让我们能够包括更多的例子并在不同的情况之间建立更多的联系。它可以深入理解事物的本质原因。
+Abstraction helps us gain a broader perspective by allowing us to include more examples and make more connections between different situations. It leads to deeper understanding by getting to the heart of why things are the way they are.
+
+抽象可以让我们看到事物之间的相互联系。例如,恶性循环通常涉及相互强化的感觉和行动。我们可以考虑如何打破这些循环。
+Abstraction allows us to see the interconnectedness between things. For example, vicious cycles often involve feelings and actions that reinforce each other. We can think about how to break these cycles.
+
+抽象有助于我们理解事物之间的关系。我们可以通过关注关系而不是内在特征来获得见解。例如,我们可以通过观察人与人之间的关系来更好地理解一个人。
+Abstraction helps us understand relationships between things. We can gain insight by focusing on relationships rather than intrinsic characteristics. For example, we can understand people better by looking at their relationships.
+
+抽象可以让我们在不同的情况之间进行切换,从不同的角度看问题。这可以帮助建立同情心,因为我们可以理解处于不同位置的感受。例如,我们可以在感觉被剥夺权利和拥有特权之间进行切换。
+Abstraction allows us to pivot between different situations and see things from different points of view. This can help build empathy as we understand what it's like to be in different positions. For example, we can pivot between feeling underprivileged and privileged.
+
+通过抽象思维进行高维思维可以简化复杂的情况。例如,偏好通常是二维的,而不是非此即彼。我们可以通过将事物框定为零和游戏而陷入一维。
+Thinking in higher dimensions via abstraction can simplify complex situations. For example, preferences are often two-dimensional rather than either-or. We can get stuck in one dimension by framing things as zero-sum games.
+
+抽象和逻辑可以与同情心形成一个良性循环,帮助我们理解他人并采取行动。我们应该追求“智慧”——使自己和他人受益。
+Abstraction and logic can create a virtuous cycle with empathy, helping us to understand others and take action. We should aim for "intelligence" - benefiting ourselves and others.
+
+要教授抽象概念,可以使用开放性的动手项目,让学生探索和发现见解,而不是追求唯一的“正确”答案。让学生写故事来表达抽象的想法。
+To teach abstraction, use open-ended, hands-on projects where students can explore and discover insights, rather than aiming for a single "right" answer. Have students write stories to convey abstract ideas.
+
+我们可以通过找到共同点和理解基本的分歧来达到不同信念的人。关注阐明而不是过于苛刻。所有的比喻都不完美,所以我们应该根据上下文考虑事物在何种意义上是类比的或不同的。
+We can reach people with different beliefs by finding common ground and understanding fundamental points of disagreement. Focus on being illuminating rather than pedantic. All analogies are imperfect, so we should consider in what senses things are analogous or different depending on context.
+
+6.19 【今日阅读】https://lobste.rs/s/iozq2j/legend_x86_cpus_decode_instructions_into 本文探讨了x86 CPU在内部是否真的会将指令解码成RISC形式的说法。作者分析了从Intel P6微体系结构到目前的设计,对一段简单的循环代码是如何处理的。
+
+P6微体系结构(1995年Pentium Pro首次推出)的确将指令解码成RISC形式的微操作。例如add [edx], eax这条指令被解码成4个微操作。这比RISC-V的相同功能的指令数还要多,这是由于P6微体系结构的设计缺陷导致的。
+
+Pentium M(首次在Pentium M处理器中推出)引入了微操作融合,可以将某些指令解码得到的微操作对融合在一起。对于add [edx], eax这条指令,Pentium M只需要3个微操作,与RISC-V代码完全匹配。
+
+Core微体系结构(首次在2006年的Core 2处理器中推出)进一步提高了微操作融合的能力。对于add [edx], eax这条指令,Core只需要2个微操作,但这2个微操作已经不太像RISC指令了。
+
+Sandy Bridge微体系结构(2011年首次推出)引入了分支融合,可以将某些运算指令与后续的条件跳转指令融合。对于示例代码中的循环,Sandy Bridge只需要4个微操作,与x86指令数相同。
+
+其他x86微体系结构,如AMD的设计和Intel Atom,在内部从未将add [edx], eax这样的指令解码成多个微操作。
+
+所以,x86 CPU将指令解码成RISC形式的说法只在某种程度上是正确的。P6微体系结构的确如此,但后续的改进使得微操作与RISC指令的对应关系变得复杂,有的微体系结构家族从未采取过这样的方式。所以,这个说法对所有的x86 CPU来说都不完全正确。
+The legend of "x86 CPUs decode instructions into RISC form internally"
+14 comments
+
+
+6.18 【今日阅读】https://lobste.rs/s/yfy98y/ikea_oriented_development I came for the title but I don’t see a lot of value in reiterating what we already know: less data is better, less external dependencies is better, having a clear API is good.
+
+What I hoped the article would touch on is how we can apply Ikea’s simple, pragmatic, not-fancy-but-also-not-ugly philosophy to programming. Making informed decisions about tradeoffs between functionality, polishing and cost is still one of the biggest challenges in product development for me, and there is something about this that Ikea seems to get right.
+
+6.17 【今日阅读】https://pboyd.io/posts/productivity-limit/ Block scheduling could make a comeback, as it begins to make sense when there’s scarcity. High GPU prices create similar incentives already, and who can say what time on the first practical quantum computers will cost.
+
 6.16 【今日阅读】https://www.sebaslab.com/the-quest-for-maintainable-code-and-the-path-to-ecs/ 这篇文章的主要内容是:
 
     作者认为可维护的代码应该易于阅读、扩展和重构。可维护的代码通常属于不断演变和变化的代码库。像游戏服务这样的产品需要不断演变来吸引玩家,代码本身也会通过无数次迭代不断变化。仅凭编码指南和代码审查是不够的,要保证代码不会随着时间的推移变得难以管理。
