--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,55 @@
+7.7 【今日阅读】https://andydote.co.uk/2023/07/06/observability-driven-ci/ Tracking where the time goes in your CI pipeline is an important step towards being able to make it go even faster. Up until somewhat recently, the only way of tracking how long tasks took in CI was either hoping people had wrapped all their commands in time ..., or by reading a timestamped build log and calculating the difference between numbers. Which isn’t great or fun, if we’re being honest.
+
+What if we could create graphs of what parts of the build took time? Something like this?
+
+7.6 【今日阅读】https://lobste.rs/s/u5ddne/programming_computing_bloggers_how_do Programming and computing bloggers: How do you decide what to write about?
+
+7.5 【今日阅读】https://lobste.rs/s/stacig/elixir_type_system_updates_moving_from 又一个添加了静态类型检查的动态类型语言，说明了动态类型的不得人心
+
+7.4 【今日阅读】https://github.com/fabianlindfors/reshape Reshape works by creating views that encapsulate the underlying tables, which your application will interact with. During a migration, Reshape will automatically create a new set of views and set up triggers to translate inserts and updates between the old and new schema.
+
+7.3 【今日阅读】https://xata.io/docs/concepts/how-it-works A database in Xata can have multiple branches, which are first-class citizens in the API. Branches are full logical databases that might or might not exist on the same set of physical instances. When you start a new branch from an existing one, the schema is copied, but the data is not automatically available in the new branch. As you create a development branch from a production branch, you can copy and sanitize parts of the data or initialize the branch with test data.
+
+7.2 【今日阅读】https://lobste.rs/s/m7igmh/commonjs_is_hurting_javascript When I was getting started with TypeScript (and node.js) a year ago, I found it a pretty delightful developer experience except for modules. Especially since I needed my code to work on both front and back end. To this day I don’t like to touch those magic declarations in .tsconfig files — I got them to work somehow, but I don’t know exactly what they do, and looking at them makes my stomach hurt.
+
+7.1 【今日阅读】https://www.softwareatscale.dev/p/quadratic-ci-cost-growth A less obvious aspect of CI cost is that, in some cases, it can increase at a quadratic rate over time. John Micco, the ex lead of the Google Test Automation Platform group, mentioned that Google would spend more on CI than the rest of its compute combined if it didn’t introduce serious optimizations along the way.
+
+6.30 【今日阅读】https://lobste.rs/s/bqqzyh/coroutines_make_robot_code_easy Coroutines make robot code easy
+
+6.29 【今日阅读】https://cohost.org/tef/post/1764930-how-not-to-write-a 文章中提到了几个不使用消息队列的原因:
+
+消息队列通常没有反压力机制,无法告诉生产者减慢发送速度。这可能导致队列大小失控并耗尽磁盘空间。
+
+消息队列通常具有持久性,无法丢弃消息。这使得重置系统状态变得困难。
+
+消息队列通常无法限制队列大小。这可能导致队列增长失控。
+
+消息队列不适合可靠性要求高的系统。消息可能会丢失,导致任务失败。需要人工干预来修复。
+
+消息队列不适合任务级并行性。一个失败的任务可能会阻塞队列,影响其他任务。
+
+消息队列通常难以调试和监控。难以确定系统中正在运行的进程,或某个任务失败的原因。
+
+消息队列通常需要人工操作来恢复失败的任务和丢失的消息。这增加了运维成本。
+
+相比之下,使用数据库跟踪状态和调度程序分配任务的方法具有以下优点:
+
+可以实现反压力,限制待处理任务数量。
+
+可以丢弃消息和重置系统状态。
+
+具有内置的任务级错误处理和重试逻辑。一个失败的任务不会影响其他任务。
+
+容易监控和调试。可以看到每个任务的状态和元数据。
+
+系统始终处于恢复状态,可以自动重启失败或过期的任务。不需要人工操作。
+
+易于扩展,可以添加更多状态和元数据。
+
+更不容易在半夜叫醒运维人员。系统更加可靠和健壮。
+
+所以,总的来说,使用消息队列的方法虽然简单,但难以构建一个可靠和健壮的系统。跟踪状态和使用调度程序可以解决许多消息队列无法解决的问题。
+
 6.28 【今日阅读】https://lobste.rs/s/ifaar4/grug_brained_developer this collection of thoughts on software development gathered by grug brain developer
 
 6.27 【今日阅读】https://www.amazon.com/dp/B0BW38DDBK who would have ever thought we need 267 pages about initializing variables/objects
