--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.8 【今日阅读】https://www.emergetools.com/deep-dives/threads There's only so much we can gather looking at public Meta builds, but it looks like Threads is heavily borrowing from Instagram on both platforms. Will be interesting to see if that changes.
+
 7.7 【今日阅读】https://andydote.co.uk/2023/07/06/observability-driven-ci/ Tracking where the time goes in your CI pipeline is an important step towards being able to make it go even faster. Up until somewhat recently, the only way of tracking how long tasks took in CI was either hoping people had wrapped all their commands in time ..., or by reading a timestamped build log and calculating the difference between numbers. Which isn’t great or fun, if we’re being honest.
 
 What if we could create graphs of what parts of the build took time? Something like this?
