--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.9 【今日阅读】https://github.com/obi1kenobi/cargo-semver-checks/tree/main/src/lints Lint your crate API changes for semver violations. cargo-semver-checks uses the rustdoc tool to analyze the crate's API. 
+
 7.8 【今日阅读】https://www.emergetools.com/deep-dives/threads There's only so much we can gather looking at public Meta builds, but it looks like Threads is heavily borrowing from Instagram on both platforms. Will be interesting to see if that changes.
 
 7.7 【今日阅读】https://andydote.co.uk/2023/07/06/observability-driven-ci/ Tracking where the time goes in your CI pipeline is an important step towards being able to make it go even faster. Up until somewhat recently, the only way of tracking how long tasks took in CI was either hoping people had wrapped all their commands in time ..., or by reading a timestamped build log and calculating the difference between numbers. Which isn’t great or fun, if we’re being honest.
