--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+7.10 【今日阅读】https://registerspill.thorstenball.com/p/the-messy-page Give me a messy project instead.
+
+Something that we already know kinda works but that needs to be extended or scaled or refactored or tested or optimized or ported or shipped. That’s the good stuff, that’s where the fun starts.
+
 7.9 【今日阅读】https://github.com/obi1kenobi/cargo-semver-checks/tree/main/src/lints Lint your crate API changes for semver violations. cargo-semver-checks uses the rustdoc tool to analyze the crate's API. 
 
 7.8 【今日阅读】https://www.emergetools.com/deep-dives/threads There's only so much we can gather looking at public Meta builds, but it looks like Threads is heavily borrowing from Instagram on both platforms. Will be interesting to see if that changes.
