--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,9 @@
+7.13 【今日阅读】https://jcs.org/2023/07/12/api 不要太自由地接受所有请求,否则将来可能需要向后兼容不规范的请求。但是也不要太死板,可在一定程度上容忍不规范的请求。
+
+7.12 【今日阅读】https://mp.weixin.qq.com/s/SV8Mu0TaOYHlDFInuzZfmQ 基于Go语言的滴滴DevOps重塑之路
+
+7.11 【今日阅读】https://bpapillon.com/post/feature-flags-theory-vs-reality/ Due to these shortcomings, the conventional wisdom has always been that feature flags should be short-lived and kept to a minimum
+
 7.10 【今日阅读】https://registerspill.thorstenball.com/p/the-messy-page Give me a messy project instead.
 
 Something that we already know kinda works but that needs to be extended or scaled or refactored or tested or optimized or ported or shipped. That’s the good stuff, that’s where the fun starts.
