--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,25 @@
+7.22 【今日阅读】https://lobste.rs/s/vpqlh9/rethinking_infrastructure_as_code_from “Infrastructure as Code” even the best implementations I’ve seen kind of suffer from the same issues:
+
+Feedback loops are long, and “runtime” exceptions are common.
+Modularity rarely, if ever, actually exists and when it does it’s a painfully leaky abstraction. (Like a tediously written 1:1 copy of every single redis.conf parameter into a text templated yaml file)
+Configuring code for multiple environments (example: {dev,staging,prod}x{pci,non-pci}x{country1, country2} almost always ends up distressingly ugly.
+
+7.21 【今日阅读】https://blog.europython.eu/kraken-technologies-how-we-organize-our-very-large-pythonmonolith/  Kraken Technologies: How we organise our very large Python monolith
+
+7.20 【今日阅读】https://buttondown.email/hillelwayne/archive/more-software-projects-need-defenses-of-design/ This document explains why SimPy is designed the way it is and how its design evolved over time. This is great! More projects need this!
+
+7.19 【今日阅读】https://news.ycombinator.com/item?id=36729377 	Life After Coding: Becoming a Mentor
+
+7.18 【今日阅读】https://news.ycombinator.com/item?id=36747052 What makes developers productive?
+
+7.17 【今日阅读】https://news.ycombinator.com/item?id=36746014 6 days to change 1 line of code (2015)
+
+7.16 【今日阅读】https://encore.dev/blog/eda-business-case Making a Business Case for an Event-Driven Architecture
+
+7.15 【今日阅读】https://www.doc.ic.ac.uk/~afd/homepages/papers/pdfs/2023/ISSTA-tool.pdf  RustSmith tool generates random but valid Rust programs to test compilers like rustc in a differential testing approach. The validation lies in checking that different compiler versions or settings compile the same random program to produce the same output. Any differences in output would indicate a potential compiler bug.
+
+7.14 【今日阅读】https://blog.testdouble.com/posts/2023-07-12-the-looming-demise-of-the-10x-developer/ 从软件行业两代程序员的差异出发,探讨了“热情”“工匠精神”“10倍程序员”等在业内颇受争议的话题。作者通过代际差异的视角,分析这些话题中的矛盾与冲突根源,让我们以新的角度思考这些争议。
+
 7.13 【今日阅读】https://jcs.org/2023/07/12/api 不要太自由地接受所有请求,否则将来可能需要向后兼容不规范的请求。但是也不要太死板,可在一定程度上容忍不规范的请求。
 
 7.12 【今日阅读】https://mp.weixin.qq.com/s/SV8Mu0TaOYHlDFInuzZfmQ 基于Go语言的滴滴DevOps重塑之路
